<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/search_bar_editText"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:hint="@string/search_hint"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/limit_display_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_bar_editText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="33dp"
        android:text="@string/limit_hint"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/limit_seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_bar_editText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="14dp"
        android:layout_toEndOf="@+id/limit_display_textView"
        android:max="30"
        android:min="10"
        android:progress="10" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/limit_seekBar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="62dp"
        android:text="@string/search_button_text" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/limit_seekBar"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="87dp"
        android:layout_toEndOf="@+id/search_button"
        android:text="@string/reset_button_text" />

    <TextView
        android:id="@+id/sort_by_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="29dp"
        android:text="@string/sort_by_hint"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/sort_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="181dp"
        android:layout_toEndOf="@+id/price_sort_textView"
        android:checked="true"
        android:textOff="Price"
        android:textOn="Date" />

    <TextView
        android:id="@+id/price_sort_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_button"
        android:layout_marginStart="55dp"
        android:layout_marginTop="29dp"
        android:layout_toEndOf="@+id/sort_by_textView"
        android:text="@string/price_sort_hint"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/price_sort_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_button"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="64dp"
        android:layout_toEndOf="@+id/sort_switch"
        android:text="@string/date_sort_hint"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/results_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price_sort_textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="173dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="179dp"
        android:text="@string/results_hint"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/results_listView"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/results_textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="12dp" />

</RelativeLayout>